--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,28 @@
+
 services:
-  actual_server:
-    image: docker.io/actualbudget/actual-server:latest
-    ports:
-      # This line makes Actual available at port 5006 of the device you run the server on,
-      # i.e. http://localhost:5006. You can change the first number to change the port, if you want.
-      - '5006:5006'
+  ts-webserver-actual:
+    image: tailscale/tailscale:latest
+    container_name: ts-webserver-actual
+    hostname: bhavibhavan
     environment:
-      # Uncomment any of the lines below to set configuration options.
-      # - ACTUAL_HTTPS_KEY=/data/selfhost.key
-      # - ACTUAL_HTTPS_CERT=/data/selfhost.crt
-      # - ACTUAL_PORT=5006
-      # - ACTUAL_UPLOAD_FILE_SYNC_SIZE_LIMIT_MB=20
-      # - ACTUAL_UPLOAD_SYNC_ENCRYPTED_FILE_SYNC_SIZE_LIMIT_MB=50
-      # - ACTUAL_UPLOAD_FILE_SIZE_LIMIT_MB=20
-      # See all options and more details at https://actualbudget.github.io/docs/Installing/Configuration
-      # !! If you are not using any of these options, remove the 'environment:' tag entirely.
+      - TS_AUTHKEY=${TS_AUTHKEY}
+      - TS_STATE_DIR=/var/lib/tailscale
+      - TS_SERVE_CONFIG=/config/actual.json
     volumes:
-      # Change './actual-data' below to the path to the folder you want Actual to store its data in on your server.
-      # '/data' is the path Actual will look for its files in by default, so leave that as-is.
-      - ./actual-data:/data
-    healthcheck:
-      # Enable health check for the instance
-      test: ["CMD-SHELL", "node src/scripts/health-check.js"]
-      interval: 60s
-      timeout: 10s
-      retries: 3
-      start_period: 20s
+      - ${PWD}/ts/state:/var/lib/tailscale
+      - ${PWD}/ts/config:/config
+      - /dev/net/tun:/dev/net/tun
+    cap_add:
+      - net_admin
+      - sys_module
     restart: unless-stopped
+  actual_server:
+    image: actualbudget/actual-server:latest-alpine
+    volumes:
+      - ./actual-data:/data
+    restart: unless-stopped
+    environment:
+      - ACTUAL_UPLOAD_FILE_SYNC_SIZE_LIMIT_MB=200
+      - ACTUAL_UPLOAD_SYNC_ENCRYPTED_FILE_SYNC_SIZE_LIMIT_MB=200
+      - ACTUAL_UPLOAD_FILE_SIZE_LIMIT_MB=200
+    network_mode: service:ts-webserver-actual
